--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
     "react": "^17.0.1",
+    "express": "^4.17.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.3",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
@@ -18,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-server": "node server/index.js",
+    "start-app": "npm run build && npm run start-server"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "nodemailer": "^6.4.16"
   }
 }
