--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
-  "homepage": "https://Ankit96211.github.io/form_response_on_mail",
-  "name": "form_response_on_mail",
+  "name": "contact-us-form",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.1",
-    "@testing-library/user-event": "^12.2.2",
-    "react": "^17.0.1",
-    "express": "^4.17.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.3",
+    "express": "^4.17.1",
+    "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "react-dom": "^16.14.0",
+    "react-scripts": "3.4.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -27,10 +23,7 @@
     "start-app": "npm run build && npm run start-server"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -45,7 +38,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
+    "dotenv": "^8.2.0",
     "nodemailer": "^6.4.16"
   }
 }
