--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{"homepage": "https://Ankit96211.github.io/humble-hacks",
   "name": "contact-us-form",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +15,8 @@
     "react-scripts": "3.4.0"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
+    "gh-pages": "^3.1.0",
     "nodemailer": "^6.4.16"
   }
 }
